# ghostpost_backend

./: README.md  db.sqlite3  pyproject.toml
api/: serializers.py  urls.py  views.py
ghostpost_backend/: settings.py
post/: admin.py  models.py
post/migrations/: 0001_initial.py  0002_remove_ghostpost_title.py  0003_auto_20200624_2020.py
